test: Add generated tests for com.google.gson.internal.reflect.ReflectionHelper.makeAccessible(Ljava/lang/reflect/AccessibleObject;)V